force-app/main/default/objects/EQCC_Header__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Name_Text__c</fullName>
        <label>Form Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionalLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Functional Location</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Location_Text__c</fullName>
        <label>Functional Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Location__c</fullName>
        <formula>Order__r.Functional_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LINK__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/cmp/c__THOR_EQCCHeaderRecordDisplay?c__recordId=&quot;+ Id + &quot;&amp;c__navigateBack=false&quot;,&quot;LINK TO RECORD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LINK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationText__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), FunctionalLocation__r.Location__c, Equipment__r.location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_CenterText__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), FunctionalLocation__r.MainWorkCenter__r.Code__c, Equipment__r.mainWorkCenter__r.Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <label>Main Work Center Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_PlantText__c</fullName>
        <formula>IF(ISBLANK(Equipment__c), FunctionalLocation__r.Maintenance_Plant__r.Code__c, Equipment__r.maintenancePlant__r.Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Text__c</fullName>
        <label>Notification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Operation</label>
        <referenceTo>Order_Operation__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Text__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>EQCC Headers</relationshipLabel>
        <relationshipName>EQCC_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant_SectionText__c</fullName>
        <formula>IF(NOT(ISBLANK(Equipment__c)), Equipment__r.plantSection__c, FunctionalLocation__r.PlantSection__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Text__c</fullName>
        <formula>Order_Operation__r.Operation_Shot_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Text</label>
        <type>Text</type>
    </fields>
    <label>EQCC Header</label>
    <nameField>
        <displayFormat>EQCCH-{0000}</displayFormat>
        <label>EQCC Header</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>